# Production-grade-cicd

./: README.md
.github/actions/python-validation-suite/: action.yml
.github/workflows/: README.md  caller-custom-action.yml  caller-node-ci.yml  cd.yml  ci-node.yml  ci.yml  demo-node-cd.yml  demo-node-ci.yml  dispatch-trigger.yml  docker_validation.yml  download-artifact.yml  manual-dispatch.yml  manual_workflow.yml  matrix-demo.yml  node-cd.yml  node-ci-cl.yml  node-ci.yml  python-ci.yml  python-custom-action.yml  python-docker-ci.yml  python-docker-ci_demo.yml  python-dockerhub-publish.yml  reusable-node-ci.yml  terraform-s3-manual.yml  test.yml
.github/workflows/.github/workflows/: ci-node.yml  ci-python.yml  nightly.yml
apps/node/: .eslintrc.json  package-lock.json  package.json  pipeline.js  pipeline.test.js  sonar-project.properties
apps/node/__tests__/: pipeline.test.js  utils.test.js
apps/node/scripts/: build-web.js
apps/node/src/: pipeline.js  server.js  utils.js
apps/python/: .flake8  Dockerfile  app.py  calculator.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
apps/python/tests/: test_calculator.py  test_pipeline.py
infra/s3-demo/: main.tf  outputs.tf  variables.tf  versions.tf
