[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shipfast-api"
version = "1.0.0"
description = "Shipfast API Python app"
requires-python = ">=3.11"
dependencies = [
    "pytest==8.2.2",
    "flake8==7.1.0",
    "pytest-cov==5.0.0",
]

[tool.setuptools]
py-modules = ["calculator", "pipeline"]